fixed css spacing in skills sections as well as padding

--- a/css/index.css
+++ b/css/index.css
@@ -10,11 +10,8 @@ text-align: center;
 font-style:roboto;
 }
 h2,p,ul,li{
-    padding-top: 20px;
-    padding-right: 30px;
-    padding-bottom: 50px;
-    padding-left: 80px;
-    display: block;
+    padding-top: 20px,30px,50px,80px;
+    display:block;
 }
 .top{
     overflow: hidden;
@@ -68,13 +65,14 @@ img{
     flex: 1 1 calc(25% - 20px); 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
     padding: 15px;
+    margin:12px;
     border-radius: 5px; 
-    background-color: #f9f9f9bd; /
+    background-color: #f9f9f9bd; 
 }
 
 @media (max-width: 768px) {
     .experiences {
-        flex: 1 1 calc(50% - 20px); /
+        flex: 1 1 calc(50% - 20px); 
     }
 }
 
